--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pokemart
-DB_USERNAME=""
-DB_PASSWORD="k"
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
